<resources>

    <string name="app_name">Craving Control</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Craving Control</string>
    <string name="name_enter">Please enter your name</string>
    <string name="gender_select">Please select your gender</string>
    <string name="male">Male</string>
	<string name="female">Female</string>
	<string name="age">How old are you?</string>
	<string name="Qlike_to_lose">How much pounds/kg would you like to lose?</string>
	<string name="notice1">*This information is going to be avialiable to those in your community*</string>
    <string name="reg_button">Register</string>
    <string name="img_description">Female</string>
    <string name="send_button">Send</string>
    <string name="wellcom_message">Press here to send a message to your community</string>
    <string name="progmsg">Checkhing Registration</string>
    <string name="sharing">Share what\'s on your mind</string>
    <string name="new_massege">New Message</string>
    <string name="registering">Registering...</string>
    <string name="new_messages">New messages</string>
    <string name="tell_the_community_about_yourself">Tell the community about yourself</string>
    <string name="no_messages">No messages</string>
    <string name="replay">Replay</string>
    <string name="back">Back</string>
    <string name="enter_a_message">Enter a message</string>
    

    
    
    

</resources>