<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="visible" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/wellcom_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical|center_horizontal|center"
            android:paddingTop="60px"
            android:text="@string/wellcom_message"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginTop="100px"
            android:contentDescription="@string/img_description"
            android:src="@drawable/enter" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:visibility="invisible" >

        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/progmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:gravity="center_vertical"
            android:text="@string/progmsg"
            android:textColor="#808080"
            android:textSize="23px"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/newmesssages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/new_messages" />

</RelativeLayout>
